--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,8 +1,9 @@
 version: 2
-build:
-  os: ubuntu-22.04
-  tools:
-    python: "3.9"
 
 sphinx:
-  configuration: docs/conf.py
+  configuration: docs/source/conf.py
+
+formats: all
+
+conda:
+  environment: environment.yml
