--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,6 +1,14 @@
 version: 2
 
+build:
+  os: "ubuntu-20.04"
+  tools:
+    python: "mambaforge-4.10"
+
 sphinx:
   configuration: docs/source/conf.py
 
 formats: all
+
+conda:
+  environment: docs/environment.yml
